# 2027techAutoApply

./: .gitignore  ARCHIVED.md  CONTRIBUTING.md  DISCLAIMER.md  README.md  profile.example.yaml  pyproject.toml
.github/workflows/: ci.yml  update-listings.yml
autoapply/: browser.py  cli.py  profile.py  state.py
autoapply/adapters/: __init__.py  ashby.py  base.py  greenhouse.py  lever.py
data/: companies.yaml  listings.json
docs/: SETUP.md
docs/superpowers/plans/: 2026-07-12-autoapply-cli.md  2026-07-12-listing-liveness.md  2026-07-12-listings-pipeline.md
docs/superpowers/specs/: 2026-07-12-internship-list-autoapply-design.md  2026-07-12-listing-liveness-design.md
scraper/: filters.py  liveness.py  main.py  merge.py  models.py  render.py
scraper/sources/: ashby.py  base.py  community.py  greenhouse.py  lever.py  smartrecruiters.py
tests/: test_adapter_ashby.py  test_adapter_greenhouse.py  test_adapter_lever.py  test_adapters_base.py  test_autoapply_sanity.py  test_cli.py  test_cli_run.py  test_filters.py  test_liveness.py  test_main.py  test_merge.py  test_models.py  test_profile.py  test_render.py  test_sanity.py  test_source_ashby.py  test_source_community.py  test_source_greenhouse.py  test_source_lever.py  test_source_smartrecruiters.py  test_state.py
tests/fixtures/: ashby_jobs.json  community_listings.json  greenhouse_jobs.json  lever_postings.json  smartrecruiters_postings.json
