[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "internships-2027"
version = "0.1.0"
description = "Summer 2027 tech internship list + semi-automated apply tool"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.31",
  "pydantic>=2.5",
  "PyYAML>=6.0",
  "playwright>=1.44",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.4"]

[project.scripts]
autoapply = "autoapply.cli:main"

[tool.setuptools]
packages = ["scraper", "scraper.sources", "autoapply", "autoapply.adapters"]

[tool.pytest.ini_options]
addopts = "-q"
markers = ["live: hits real external APIs (excluded from CI)"]

[tool.ruff]
line-length = 100
